<resources>
    <string name="app_name">EngineerBabu</string>
    <string name="please_wait">Please wait</string>
    <string name="network_error">Check your internet connection</string>
    <string name="unexpected_error">An unexpected error occurred, please try again.</string>
    <string name="enter_email">Enter your email</string>
    <string name="enter_a_valid_email">Enter a valid email</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="mobile_number_must_be_n_digits">Mobile number length must be %d digits</string>
    <string name="enter_password">Enter password</string>
    <string name="password_length_at_least_n_digits">Password length should be at least %d characters</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="chat_notifications">Chat Notifications</string>
    <string name="other_notifications">Other Notifications</string>
    <string name="logout">Logout</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="title_activity_client_home">ClientHomeActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
</resources>
